--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -18,6 +18,12 @@
   -webkit-text-size-adjust: 100%;
 }
 
+h1 {
+  font-size: 1.6em;
+  line-height: 1.1;
+}
+/*
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -35,10 +41,7 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+
 
 button {
   border-radius: 8px;
@@ -70,4 +73,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
